<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:weightSum="1" >

    <TextView
        android:id="@+id/cardRegisterTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.125"
        android:text="@string/registe_creditcard"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/cardNameLinearLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.1" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/card_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/inputCreditCardNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:ems="13"
            android:hint="@string/card_name_hint"
            android:textSize="13sp"
            android:inputType="textPersonName"
            android:maxLength="15" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardNumberLinearLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.1"
        android:weightSum="1" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/card_number"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/inputCreditCardNumberEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:ems="13"
            android:hint="@string/card_number_hint"
            android:textSize="13sp"
            android:inputType="number"
            android:maxLength="16" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/monthYearLinearLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.1"
        android:weightSum="1" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.575"
            android:text="@string/card_validity"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/inputMonthNumberEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center_horizontal"
            android:ems="13"
            android:hint="@string/validity_hint_month"
            android:textSize="13sp"
            android:inputType="number"
            android:maxLength="2" />
        
        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.025"
            android:text="@string/slash"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/inputYearNumberEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center_horizontal"
            android:ems="13"
            android:hint="@string/validity_hint_year"
            android:textSize="13sp"
            android:inputType="number"
            android:maxLength="2" />

    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/CVCLinearLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.1"
        android:weightSum="1" >
        
        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:text="@string/card_cvc"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/inputCVCNumberEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="center_horizontal"
            android:ems="13"
            android:hint="@string/cvc_hint"
            android:textSize="13sp"
            android:inputType="number"
            android:maxLength="3" />
    </LinearLayout>

    <ImageView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/preview" />

    <LinearLayout
        android:id="@+id/buttonLinearLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.025"        
        android:weightSum="1" >

        <Button
            android:id="@+id/setColorButton"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:onClick="onClick"
            android:text="@string/set_color" />

        <Button
            android:id="@+id/registerButton"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:onClick="onClick"
            android:text="@string/registe" />

    </LinearLayout>

</LinearLayout>