<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:weightSum="1" >

    <TextView
        android:id="@+id/cardRegisterTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:text="@string/registe_pointcard"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/cardNameLinearLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/card_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/inputCardNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:ems="13"
            android:hint="@string/card_name_hint"
            android:textSize="13sp"
            android:inputType="textPersonName"
            android:maxLength="15" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardNumberLinearLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.1"
        android:weightSum="1" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/card_number"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/inputCardNumberEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:ems="13"
            android:hint="@string/card_number_hint"
            android:textSize="13sp"
            android:inputType="number"
            android:maxLength="16" />

    </LinearLayout>
 
    <ImageView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.625"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/preview" />

    <LinearLayout
        android:id="@+id/buttonLinearLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.025"        
        android:weightSum="1" >

        <Button
            android:id="@+id/setColorButton"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:onClick="onClick"
            android:text="@string/set_color" />

        <Button
            android:id="@+id/registerButton"
            style="@style/AppTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:onClick="onClick"
            android:text="@string/registe" />

    </LinearLayout>

</LinearLayout>